--- a/public/t1a13-json-Aden.html
+++ b/public/t1a13-json-Aden.html
@@ -150,3 +150,66 @@ document.getElementById('jsonExplanation').value = "JSON (JavaScript Object Nota
 
 </body>
 </html>
+
+
+
+
+    {
+  "math_questions": [
+    {
+      "id": 1,
+      "question": "What is 5 + 3?",
+      "options": {
+        "A": 6,
+        "B": 8,
+        "C": 7,
+        "D": 5
+      },
+      "correct_answer": "B"
+    },
+    {
+      "id": 2,
+      "question": "What is 12 - 4?",
+      "options": {
+        "A": 9,
+        "B": 8,
+        "C": 7,
+        "D": 10
+      },
+      "correct_answer": "B"
+    },
+    {
+      "id": 3,
+      "question": "What is 9 x 3?",
+      "options": {
+        "A": 27,
+        "B": 29,
+        "C": 24,
+        "D": 30
+      },
+      "correct_answer": "A"
+    },
+    {
+      "id": 4,
+      "question": "What is 16 ÷ 4?",
+      "options": {
+        "A": 4,
+        "B": 5,
+        "C": 3,
+        "D": 6
+      },
+      "correct_answer": "A"
+    },
+    {
+      "id": 5,
+      "question": "What is the square root of 49?",
+      "options": {
+        "A": 5,
+        "B": 6,
+        "C": 7,
+        "D": 8
+      },
+      "correct_answer": "C"
+    }
+  ]
+}
