--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fetch JSON Example</title>
+    <title>Random Animal Images & Math Problems</title>
 </head>
 <body>
 
-<textarea cols="70" rows="5" id="jsonExplanation" readonly></textarea>
-<br>
+<h1>Random Animal Images & Math Problems</h1>
+
+<!-- Section for Animal Image Fetching -->
 <label for="myText1">Enter a JSON returning URL:</label>
 <input type="text" id="myText1" value="https://randomfox.ca/floof/">
 <input type="button" value="Show JSON" onclick="fetchData()"><br><br>
@@ -17,12 +18,20 @@
     <option value="https://randomfox.ca/floof/">RandomFox</option>
     <option value="https://dog.ceo/api/breeds/image/random">Dog CEO</option>
     <option value="https://api.thecatapi.com/v1/images/search">Random Cat</option>
-    <option value="https://penguin-api.sh/penguins/random">Random Penguin</option>
-    <!-- Add more JSON returning URLs here -->
 </select><br><br>
 
 <div id="myDiv1">Fetched JSON will appear here.</div>
 <img id="fetchedImage" src="" alt="Fetched Image" style="display:none; margin-top: 20px; max-width: 100%; height: auto;"/>
+
+<hr>
+
+<!-- Section for Math Problems -->
+<h2>Random Math Problems</h2>
+<button onclick="generateMathProblem()">Generate Math Problem</button>
+<div id="mathProblem" style="margin-top: 20px; font-size: 1.5em;"></div>
+<div id="answer" style="margin-top: 20px; font-size: 1.5em;"></div>
+
+<textarea cols="70" rows="5" id="jsonExplanation" readonly></textarea>
 
 <script>
 async function fetchData() {
@@ -49,9 +58,6 @@ async function fetchData() {
         } else if (data[0] && data[0].url) {
             // The Cat API structure
             imageUrl = data[0].url;
-        } else if (data && data.image) {
-            // Penguin API structure
-            imageUrl = data.image;
         }
 
         // Update the image element if an image URL is found
@@ -77,6 +83,40 @@ function updateUrl(selectedUrl) {
 
 // Explanation of JSON compared to JavaScript objects
 document.getElementById('jsonExplanation').value = "JSON (JavaScript Object Notation) is a lightweight data interchange format that is easy for humans to read and write and easy for machines to parse and generate. JSON is a text format that is completely language independent but uses conventions that are familiar to programmers of the C family of languages. In contrast, JavaScript objects are dynamic and can contain functions, whereas JSON is purely a data format and cannot contain functions or methods.";
+
+// Math Problem Generation
+function generateMathProblem() {
+    // Generate random numbers and choose an operation
+    const num1 = Math.floor(Math.random() * 100); // Random number between 0 and 99
+    const num2 = Math.floor(Math.random() * 100); // Random number between 0 and 99
+    const operations = ['+', '-', '*', '/'];
+    const operation = operations[Math.floor(Math.random() * operations.length)];
+
+    // Create the math problem
+    const problem = `${num1} ${operation} ${num2}`;
+    
+    // Calculate the answer
+    let answer;
+    switch (operation) {
+        case '+':
+            answer = num1 + num2;
+            break;
+        case '-':
+            answer = num1 - num2;
+            break;
+        case '*':
+            answer = num1 * num2;
+            break;
+        case '/':
+            // Avoid division by zero
+            answer = num2 !== 0 ? (num1 / num2).toFixed(2) : 'undefined (division by zero)';
+            break;
+    }
+
+    // Display the problem and answer
+    document.getElementById('mathProblem').textContent = `Problem: ${problem}`;
+    document.getElementById('answer').textContent = `Answer: ${answer}`;
+}
 </script>
 
 </body>
