--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -11,11 +11,14 @@
             color: #333;
             margin: 0;
             padding: 20px;
-            text-align: center;
+            display: flex; /* Apply flexbox */
+            flex-direction: column; /* Stack elements vertically */
+            align-items: center; /* Center elements horizontally */
         }
 
         h1 {
             color: #4CAF50;
+            margin-bottom: 20px;
         }
 
         input[type="text"], input[type="number"], input[type="button"], select {
@@ -51,9 +54,11 @@
             padding: 20px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             margin: 20px 0;
-            display: inline-block;
-            width: 300px;
-            text-align: left;
+            display: flex; /* Use flexbox for alignment */
+            flex-direction: column; /* Stack image and stats vertically */
+            align-items: center; /* Center items horizontally */
+            width: 300px; /* Fixed width */
+            text-align: center; /* Center align text */
         }
 
         .pokemon-container img {
@@ -68,6 +73,8 @@
 
         .pokemon-stats {
             margin-top: 10px;
+            text-align: left; /* Left-align stats */
+            width: 100%; /* Full width for stats */
         }
 
         .stat {
@@ -76,7 +83,7 @@
 
         @media (max-width: 600px) {
             .pokemon-container {
-                width: 90%;
+                width: 90%; /* Full width on small screens */
             }
         }
     </style>
