--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -53,6 +53,37 @@
             transform: scale(1.05);
         }
 
+        .calculator-container, .keyboard {
+            margin-top: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .keyboard {
+            display: none;
+            margin-top: 10px;
+        }
+
+        .keyboard-row {
+            display: flex;
+        }
+
+        .keyboard-button {
+            padding: 10px;
+            margin: 5px;
+            background-color: #52057b;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        .keyboard-button:hover {
+            background-color: #8e44ad;
+        }
+
         .pokemon-container {
             background-color: white;
             border-radius: 15px;
@@ -72,7 +103,7 @@
         }
 
         .pokemon-container img {
-            max-width: 100%; 
+            max-width: 100%;
             border-radius: 10px;
             transition: transform 0.3s;
             border: 4px solid #8e44ad;
@@ -85,7 +116,7 @@
         .pokemon-stats {
             margin-top: 15px;
             text-align: left;
-            width: 100%; 
+            width: 100%;
             font-size: 14px;
         }
 
@@ -121,11 +152,46 @@
 
 <hr>
 
-<!-- Section for Math Problems -->
+<!-- Section for Calculator -->
 <h2>Calculator</h2>
-<input type="text" id="mathInput" placeholder="Enter math expression (e.g. 3+4*2)">
-<input type="button" value="Calculate" onclick="calculateMath()"><br><br>
-<div id="mathResult" style="font-size: 1.5em;"></div>
+<div class="calculator-container">
+    <input type="text" id="mathInput" placeholder="Enter math expression" readonly>
+    <input type="button" value="Show Keyboard" onclick="toggleKeyboard()">
+    <input type="button" value="Calculate" onclick="calculateMath()"><br>
+    <div id="mathResult" style="font-size: 1.5em;"></div>
+</div>
+
+<!-- Keyboard Section -->
+<div class="keyboard" id="keyboard">
+    <div class="keyboard-row">
+        <button class="keyboard-button" onclick="addToInput('7')">7</button>
+        <button class="keyboard-button" onclick="addToInput('8')">8</button>
+        <button class="keyboard-button" onclick="addToInput('9')">9</button>
+        <button class="keyboard-button" onclick="addToInput('/')">/</button>
+    </div>
+    <div class="keyboard-row">
+        <button class="keyboard-button" onclick="addToInput('4')">4</button>
+        <button class="keyboard-button" onclick="addToInput('5')">5</button>
+        <button class="keyboard-button" onclick="addToInput('6')">6</button>
+        <button class="keyboard-button" onclick="addToInput('*')">*</button>
+    </div>
+    <div class="keyboard-row">
+        <button class="keyboard-button" onclick="addToInput('1')">1</button>
+        <button class="keyboard-button" onclick="addToInput('2')">2</button>
+        <button class="keyboard-button" onclick="addToInput('3')">3</button>
+        <button class="keyboard-button" onclick="addToInput('-')">-</button>
+    </div>
+    <div class="keyboard-row">
+        <button class="keyboard-button" onclick="addToInput('0')">0</button>
+        <button class="keyboard-button" onclick="addToInput('.')">.</button>
+        <button class="keyboard-button" onclick="addToInput('(')"> ( </button>
+        <button class="keyboard-button" onclick="addToInput(')')"> ) </button>
+    </div>
+    <div class="keyboard-row">
+        <button class="keyboard-button" onclick="addToInput('+')">+</button>
+        <button class="keyboard-button" onclick="clearInput()">C</button>
+    </div>
+</div>
 
 <hr>
 
@@ -191,7 +257,16 @@
         document.getElementById('animalJson').innerHTML = `Selected URL: ${selectedUrl}`;
     }
 
-    // Functionality for Math Problems
+    // Functionality for Calculator
+    function addToInput(value) {
+        document.getElementById('mathInput').value += value; // Append value to input
+    }
+
+    function clearInput() {
+        document.getElementById('mathInput').value = ''; // Clear the input
+        document.getElementById('mathResult').textContent = ''; // Clear the result display
+    }
+
     function calculateMath() {
         const input = document.getElementById('mathInput').value;
         let result;
@@ -206,6 +281,11 @@
         }
         
         document.getElementById('mathResult').textContent = `Result: ${result}`;
+    }
+
+    function toggleKeyboard() {
+        const keyboard = document.getElementById('keyboard');
+        keyboard.style.display = (keyboard.style.display === "none" || keyboard.style.display === "") ? "flex" : "none";
     }
 
     // Functionality for Pokémon Display
