--- a/public/index.html
+++ b/public/index.html
@@ -73,6 +73,7 @@ Aden
          <li><a href="t1a12-objects-Aden.html">t1a12-objects-Aden.html</a></li>
           <li><a href="t1a13-json-Aden.html">t1a13-json-Aden.html</a></li>
           <li><a href="t1a14-objects-arrays-Aden.html">t1a14-objects-arrays-Aden.html</a></li> 
+         <li><a href="t1a15-objects-events-Aden.html">t1a15-objects-events-Aden.html</a></li> 
     </ul>
 
     <h2>X Assignments</h2>
