--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -1,40 +1,24 @@
-class EventManager:
-    def __init__(self):
-        """Initialize the event manager with a dictionary to hold events."""
-        self.events = {}
+import tkinter as tk
+from tkinter import messagebox
 
-    def subscribe(self, event_name, handler):
-        """Subscribe a handler to an event."""
-        if event_name not in self.events:
-            self.events[event_name] = []
-        self.events[event_name].append(handler)
-        print(f"Subscribed {handler.__name__} to {event_name}")
+class SimpleApp:
+    def __init__(self, root):
+        """Initialize the application with a Tkinter window."""
+        self.root = root
+        self.root.title("Button Click Event Example")
+        
+        # Create a button
+        self.button = tk.Button(root, text="Click Me!", command=self.on_button_click)
+        self.button.pack(pady=20)
 
-    def unsubscribe(self, event_name, handler):
-        """Unsubscribe a handler from an event."""
-        if event_name in self.events:
-            self.events[event_name].remove(handler)
-
-    def trigger(self, event_name, *args, **kwargs):
-        """Trigger an event, calling all subscribed handlers."""
-        if event_name in self.events:
-            for handler in self.events[event_name]:
-                handler(*args, **kwargs)
-
-# Example usage
-def on_user_registered(username):
-    print(f"User registered: {username}")
-
-def on_user_logged_in(username):
-    print(f"User logged in: {username}")
+    def on_button_click(self):
+        """Event handler for button click."""
+        messagebox.showinfo("Button Clicked", "You clicked the button!")
 
 if __name__ == "__main__":
-    event_manager = EventManager()
-
-    # Subscribing to events
-    event_manager.subscribe("user_registered", on_user_registered)
-    event_manager.subscribe("user_logged_in", on_user_logged_in)
-
-    # Triggering events
-    event_manager.trigger("user_registered", "Alice")
-    event_manager.trigger("user_logged_in", "Alice")
+    # Create the root window
+    root = tk.Tk()
+    # Create an instance of the SimpleApp
+    app = SimpleApp(root)
+    # Run the Tkinter event loop
+    root.mainloop()
