--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -1,24 +1,34 @@
-import tkinter as tk
-from tkinter import messagebox
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Button Click Event Example</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f4f4f4;
+        }
+        button {
+            padding: 15px 30px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+    </style>
+</head>
+<body>
+    <button id="myButton">Click Me!</button>
 
-class SimpleApp:
-    def __init__(self, root):
-        """Initialize the application with a Tkinter window."""
-        self.root = root
-        self.root.title("Button Click Event Example")
-        
-        # Create a button
-        self.button = tk.Button(root, text="Click Me!", command=self.on_button_click)
-        self.button.pack(pady=20)
-
-    def on_button_click(self):
-        """Event handler for button click."""
-        messagebox.showinfo("Button Clicked", "You clicked the button!")
-
-if __name__ == "__main__":
-    # Create the root window
-    root = tk.Tk()
-    # Create an instance of the SimpleApp
-    app = SimpleApp(root)
-    # Run the Tkinter event loop
-    root.mainloop()
+    <script>
+        // Function to handle button click event
+        document.getElementById("myButton").onclick = function() {
+            alert("You clicked the button!");
+        };
+    </script>
+</body>
+</html>
