--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -8,6 +8,7 @@
         body {
             font-family: Arial, sans-serif;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
@@ -18,16 +19,23 @@
             padding: 15px 30px;
             font-size: 16px;
             cursor: pointer;
+            margin-bottom: 20px;
+        }
+        #message {
+            font-size: 18px;
+            color: #333;
         }
     </style>
 </head>
 <body>
     <button id="myButton">Click Me!</button>
+    <div id="message"></div>
 
     <script>
         // Function to handle button click event
         document.getElementById("myButton").onclick = function() {
-            alert("You clicked the button!");
+            // Update the message displayed on the page
+            document.getElementById("message").innerText = "You clicked the button!";
         };
     </script>
 </body>
