--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -1,20 +1,20 @@
- <b onTouchEvent="{alert('onTouchEvents01')}">Input:</b>
+ <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Event Handling Example</title>
+</head>
+<body onmousemove="document.getElementById('myDiv01').innerHTML = 'x: ' + event.clientX + ', y: ' + event.clientY" 
+      onkeydown="document.getElementById('myDiv01').innerHTML = 'key: ' + event.key">
+    
+    <b onTouchEnd="document.getElementById('myDiv01').innerHTML = 'onTouchEnd'">Input:</b>
 
+    <input type="text" id="myFirstName" value="Aden" onblur="document.getElementById('myDiv01').innerHTML = 'onBlur'"><br><br>
 
-<input type=text id="myFirstName" value="Aden"
-onBlur="{'alert('onBlur01')}"><br><br>
+    <input type="button" value="show on page" onclick="document.getElementById('myDiv01').innerHTML = 'Hey'"><br><br>
 
-<input type=button value="show on page" onclick="{
-     document.getElementById('myDiv01').innerHTML = 'Hey'
-    }"><br><br>
-    <div id="myDiv01" onMouseOver="{alert('onMouseOver)}">...</div><br><br>
+    <div id="myDiv01" onmouseover="document.getElementById('myDiv01').innerHTML = 'onMouseOver'">...</div><br><br>
 
-
- <body onMouseMove="{
-        document.getElementById('myDiv01').innerHTML =
-      x:$(event.clientX), y:$(event.clientY}'
-
-}" onKeyDown="{
-        document.getElementById('myDiv01').innerHTML =
-      'key:${event.key}"
-      }">
+</body>
+</html>
