--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -1,9 +1,20 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Event Handling Example</title>
+    <style>
+        /* Optional: Just for better visibility of the full page */
+        body {
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            background-color: #f0f0f0;
+        }
+    </style>
 </head>
 <body onmousemove="document.getElementById('myDiv01').innerHTML = 'x: ' + event.clientX + ', y: ' + event.clientY" 
       onkeydown="document.getElementById('myDiv01').innerHTML = 'key: ' + event.key">
